다국어처리 기능 추가

--- a/client/index.html
+++ b/client/index.html
@@ -66,11 +66,16 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+      <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
+      <script src="components/translation/sg.translation.module.js"></script>
+      <script src="components/translation/sg.translation.js"></script>
+      <script src="components/message/sg.message.module.js"></script>
+      <script src="components/message/sg.message.js"></script>
       <!-- injector:js -->
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
